# from-the-beginning

./: .gitignore  LICENSE  README.md  from-the-beginning.sln
C Learning projects/: Array_HW.c  Learning_01_HelloWorld.c  Learning_02_typedef.c  _C_TempCode.c
C++ Boost Practice/Base/: CMakeLists.txt  main.cpp
C++ Learning projects/Exercise/: Taks_02_cap_letters.cpp  Task_01.cpp  Task_05_redundant_function.cpp  Task_06_capital_split.cpp  Task_07_find_sum_of_positive.cpp  Task_08_anagram.cpp
C++ Learning projects/Leetcode/: Leetcode_01_Two_Sum.cpp  Leetcode_02_Add_two_numbers.cpp  Leetcode_03_longest_substring.cpp  Leetcode_125_Valid_Palindrome.cpp  Leetcode_141_Linked_List_Cycle.cpp  Leetcode_26_Remove_Duplicates_from_Sorted_Array.cpp  Leetcode_27_Remove_Element.cpp  Leetcode_28_find-the-index-of-the-first-occurrence-in-a-string.cpp  Leetcode_5_Longest_Palindromic_Substring.cpp  Leetcode_88_Merge_Sorted_Array.cpp
C++ Learning projects/Patterns/: 01_Fabric_method.cpp  02_Abstract_Factory.cpp
C++ Learning projects/_Learning c++/: Learning_01_variables.cpp  Learning_02_const.cpp  Learning_03_namespace.cpp  Learning_04_typedef_using.cpp  Learning_05_remainder.cpp  Learning_06_output_message.cpp  Learning_08_getline.cpp  Learning_09_math_operations.cpp  Learning_10_rectangle_side_calculator.cpp  Learning_11_if_statement.cpp  Learning_12_switch.cpp  Learning_13_switch_measure.cpp  Learning_18_do_while_loop.cpp  (+47 more)
CMake_HW_test/: CMakeLists.txt  main.cpp  version.cpp  version.h
Python practise/: Prac_01_helloworld.py
СS_Practice/: Program.cs  from-the-beginning.csproj
(+9 files in other folders)
